Replace placeholder gallery images with local assets
Update Main.html gallery to use project image assets instead of placeholder foto*.jpg files and add the image files to the repo. Main.html now references src/1.jpeg, src/8.jpeg, src/4.jpeg, src/2.jpeg, src/3.jpeg, src/5.jpeg, src/7.jpeg and src/9.jpeg. Added new image files src/1.jpeg through src/9.jpeg (src/6.jpeg is added but not referenced in the markup). This prepares the gallery to display the project's actual photos and expands available assets.

--- a/Main.html
+++ b/Main.html
@@ -56,11 +56,14 @@
     <section class="gallery-section">
         <h2>NUESTRO COMPROMISO</h2>
         <div class="masonry-gallery">
-            <div class="photo"><img src="foto1.jpg" alt="Compromiso"></div>
-            <div class="photo"><img src="foto2.jpg" alt="Compromiso"></div>
-            <div class="photo"><img src="foto3.jpg" alt="Compromiso"></div>
-            <div class="photo"><img src="foto4.jpg" alt="Compromiso"></div>
-            <div class="photo"><img src="foto5.jpg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/1.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/8.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/4.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/2.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/3.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/5.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/7.jpeg" alt="Compromiso"></div>
+            <div class="photo"><img src="src/9.jpeg" alt="Compromiso"></div>
         </div>
     </section>
     <section class="timeline-section">
