Embed landing page into index.html
Consolidate the standalone landing page into index.html by replacing the redirect meta with the full HTML, inline CSS and JS previously in LandingPage.html. Removed now-redundant files: LandingPage.html, script.js and styles.css. The interactive invitation (seal, envelope, card and continue button) is preserved inline; image assets remain referenced from src/.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,159 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=LandingPage.html">
-  <title>Redirigiendo...</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Invitación Especial</title>
+    <style>
+        :root {
+            --color-dorado: #c5a059;
+            --fondo-crema: #fdfaf6;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: var(--fondo-crema);
+            font-family: 'Times New Roman', serif;
+            overflow: hidden;
+        }
+
+        .escena {
+            position: relative;
+            width: 400px;
+            height: 300px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* --- SELLO DE CERA --- */
+        #sello {
+            position: absolute;
+            z-index: 10;
+            width: 200px;
+            cursor: pointer;
+            transition: opacity 1s ease, transform 1.5s ease;
+        }
+
+        .girar-desvanecer {
+            transform: rotate(360deg) scale(1.2);
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        /* --- SOBRES --- */
+        .sobre {
+            position: absolute;
+            width: 200%;
+            transition: opacity 0.8s ease;
+        }
+
+        #sobre-abierto {
+            opacity: 0;
+        }
+
+        /* --- TARJETA --- */
+        .tarjeta {
+            position: absolute;
+            width: 75%;
+            height: 150px;
+            background: white;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+            border: 1px solid #eee;
+            z-index: 2;
+            transform: translateY(0);
+            opacity: 0;
+            transition: transform 1.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease;
+        }
+
+        .tarjeta h2 {
+            color: var(--color-dorado);
+            font-style: italic;
+            font-weight: lighter;
+            font-size: 1.8rem;
+        }
+
+        .subir-tarjeta {
+            transform: translateY(-120px);
+            opacity: 1;
+        }
+
+        /* --- BOTÓN CONTINUAR --- */
+        #btn-continuar {
+            position: absolute;
+            bottom: -80px;
+            padding: 10px 30px;
+            background-color: var(--color-dorado);
+            color: white;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            opacity: 0;
+            transition: opacity 1s ease;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 0.9rem;
+        }
+
+        .mostrar-boton {
+            opacity: 1 !important;
+        }
+
+    </style>
 </head>
 <body>
+
+    <div class="escena">
+        <img src="src/sello.png" id="sello" alt="Sello de cera" onclick="iniciarAnimacion()">
+
+        <img src="src/sobre-cerrado.png" id="sobre-cerrado" class="sobre" alt="Sobre cerrado">
+
+        <img src="src/sobre-abierto.png" id="sobre-abierto" class="sobre" alt="Sobre abierto">
+
+        <div class="tarjeta" id="tarjeta">
+            <h2>Eres un invitado especial</h2>
+        </div>
+
+        <button id="btn-continuar" onclick="window.location.href='main.html'">Continuar</button>
+    </div>
+
+    <script>
+        function iniciarAnimacion() {
+            const sello = document.getElementById('sello');
+            const sobreCerrado = document.getElementById('sobre-cerrado');
+            const sobreAbierto = document.getElementById('sobre-abierto');
+            const tarjeta = document.getElementById('tarjeta');
+            const boton = document.getElementById('btn-continuar');
+
+            // 1. Girar y desvanecer sello
+            sello.classList.add('girar-desvanecer');
+
+            // 2. Después de que el sello desaparece, cambiar de sobre
+            setTimeout(() => {
+                sobreCerrado.style.opacity = '0';
+                sobreAbierto.style.opacity = '1';
+            }, 1000);
+
+            // 3. Después de que el sobre se abre, sale la tarjeta
+            setTimeout(() => {
+                tarjeta.classList.add('subir-tarjeta');
+            }, 1800);
+
+            // 4. Finalmente aparece el botón de continuar
+            setTimeout(() => {
+                boton.classList.add('mostrar-boton');
+            }, 2800);
+        }
+    </script>
 </body>
 </html>
