--- a/Main.html
+++ b/Main.html
@@ -216,7 +216,7 @@
                     </div>
                 </div>
     
-                <button type="submit" id="button-send" class="btn-primary">ENVIAR CONFIRMACIÓN</button>
+                <button type="submit" id="button-send" class="btn-primary">Enviar</button>
             </form>
         </div>
     </section>
