Update footer logo and refine styles
Replace footer logo source and consolidate several style improvements: adjust gallery/masonry sizing and responsive behavior to match the primary collage; refine form selectors to exclude radio inputs; rework radio controls to use native-styled circular inputs for better accessibility and layout (flex alignment, spacing, checked state); tweak footer visuals (colors, padding, spacing, max-width, fonts, logo size and responsive adjustments) and minor comment/spacing cleanups. These changes improve responsiveness, visual consistency and form accessibility.

--- a/Main.html
+++ b/Main.html
@@ -312,7 +312,7 @@
         </div>
 
         <div class="footer-section">
-            <img src="logo-dosa.png" alt="Dosa Eventos" class="logo-footer">
+            <img src="src/anillos.png" alt="Dosa Eventos" class="logo-footer">
         </div>
 
         <div class="footer-section">
