--- a/Main.html
+++ b/Main.html
@@ -163,8 +163,18 @@
                     <img src="src/vestimenta.png" alt="Inspiración Vestimenta" class="dresscode-image">
                 </div>
                 <p class="color-reserve">Nota: El color blanco y beige queda reservado para la novia.</p>
+              
+                
+            </div>
 
-
+            <div class="divider"><img src="src/separador.png" alt="decoración"></div>
+            <div class="tarjeta" id="tarjeta">
+                <div class="contenido-tarjeta">
+                    <div class="lluvia-sobres">
+                        <img src="src/sobre-cerrado.PNG" alt="Sobre" style="width: 200px; margin-bottom: -40px; margin-top: -40px;">
+                        <p style="font-family: 'Great Vibes', cursive; font-size: 2rem; margin: 0;">Lluvia de Sobres</p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -317,7 +327,7 @@
 
         <div class="footer-section">
             <span class="nombre-planner">Celular</span>
-            <span class="rol-planner">321 4603514</span>
+            <p class="rol-planner">321 4603514</p>
         </div>
     </div>
 </footer>
