Add .nombres class and apply to logo
Replace the logo's inline width with a new .nombres CSS class and apply it in Main.html. The stylesheet now sets .nombres max-width to 20% (desktop) with a mobile override of 70% inside the media query to improve responsive sizing and maintainability; the existing margin-bottom is preserved.

--- a/Main.html
+++ b/Main.html
@@ -312,7 +312,7 @@
 
 
         <div class="divider"><img src="src/separador.png" alt="decoración"></div>
-        <img src="src/logo.png" alt="nombres" style="width: 90%;margin-bottom: -30px;">
+        <img src="src/logo.png" alt="nombres" class="nombres" style="margin-bottom: -30px;">
         </section>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
