--- a/Main.html
+++ b/Main.html
@@ -51,15 +51,11 @@
     <section class="story-section">
         <h2 class="script-font">Nuestra historia comienza aquí</h2>
         <div class="story-text">
-            <p>¡Eres muy importante para nosotros y por eso nos hace mucha ilusión que nos acompañes el día de nuestra
-                boda! <br>
-
-                Queremos comenzar nuestro matrimonio poniendo nuestra vida en manos de Nuestro Señor y de la Virgen
-                Santísima, pidiendo su bendición y su gracia para el camino que empezamos. Por eso, con mucha alegría,
-                queremos compartir este momento tan especial contigo y celebrar juntos este paso que damos, rodeados de
-                las personas que más amamos.
-
-                <br>¡Nos encomendamos en tus oraciones!
+            <p>¡Eres muy importante para nosotros y por eso nos hace mucha ilusión que nos acompañes el día de la boda!
+<br> <br>
+                Deseamos comenzar esta nueva etapa poniendo la vida en manos de Nuestro Señor y de la Virgen Santísima, pidiendo su bendición y su gracia para el camino que iniciamos. Por eso, con mucha alegría, queremos compartir este momento tan especial contigo y celebrar juntos este paso, rodeados de las personas que más amamos.
+                <br> 
+               <b>¡Nos encomendamos en tus oraciones!</b> 
             </p>
         </div>
     </section>
