--- a/Main.html
+++ b/Main.html
@@ -195,9 +195,9 @@
                     celebrada en latín, que invita al recogimiento. No se preocupen por el idioma: oportunamente les
                     facilitaremos un misal guía con todas las traducciones para que puedan acompañarnos paso a paso.
                     <br> <br> ●<b> Sobre la Eucaristía: </b>debido a las pequeñas diferencias que tiene el
-                    rito Tridentina, les invitamos a estar atentos a las posturas y movimientos, tomando como referencia
+                    rito Tridentino, les invitamos a estar atentos a las posturas y movimientos, tomando como referencia
                     a quienes se encuentran en las bancas delanteras.<br> <br> ●<b> Sugerencia para damas: </b> Quienes lo deseen, pueden usar velo o mantilla dentro
-                    del templo. 
+                    de la capilla. 
                 </p>
             </div>
 
